fix(minor): font size and padding size problem

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: 'Times New Roman', Times, serif;
-      font-size: 20px; /* 缩小字体大小 */
+      font-size: 18px; /* 缩小字体大小 */
       background: url('images/home.jpg') no-repeat center center fixed;
       background-size: cover;
       position: relative;
@@ -138,7 +138,7 @@
                               <d>Guohao Dai</d></a> at <a href="https://dai.sjtu.edu.cn/" target="_blank">
                                 <d>the Design Automation Innovation & Domain-specific Artificial Intelligence (DAI) Group</d></a>. My research interest mainly lies in the intersection between artificial intelligence and computer systems, especially in the field of creating efficient algorithms, systems and accelerators for machine learning. <br><br>
 
-                Feel free to check out my CV and drop me an e-mail if you're interested in my research or coursework.
+                Feel free to check out my CV and shoot me an email if you'd like to chat! if you're interested in my research or coursework.
 
                 <!-- I am an incoming PhD student at  <a href="https://www.berkeley.edu/" target="_blank">
                   <d>UC Berkeley</d></a>. Previously, I was a visiting scholar at 
@@ -302,7 +302,7 @@
           malle_stop()
     </script>
       </td>
-      <td style="padding:60px;width:90%;vertical-align:middle">
+      <td style="padding:80px;width:90%;vertical-align:middle">
         <a href="https://polarisdane.github.io/KETA/" target="_blank">
           <papertitle>KETA: Kinematic-Phrases-Enhanced Text-to-Motion Generation via Fine-grained Alignment
           </papertitle>
@@ -312,7 +312,7 @@
         <br>
         (*equal contribution)
         <br>
-        <a href="https://polarisdane.github.io/KETA/CV_assignment.pdf">Paper</a> /
+        <a href="https://arxiv.org/abs/2501.15058">Paper</a> /
         <a href="https://polarisdane.github.io/KETA">Project</a> / 
         <a href="https://github.com/PolarisDane/KETA/tree/main">Code</a>
           <!-- @misc{kuang2024ramretrievalbasedaffordancetransfer,
