fix(minor): background margin

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
       font-size: 18px; /* 缩小字体大小 */
       background: url('images/home.jpg') no-repeat center center fixed;
       background-size: cover;
+      min-height: 100vh; /* 确保 body 高度至少为视口高度 */
+      margin: 0; /* 移除默认外边距 */
       position: relative;
     }
 
     body::after {
       content: "";
-      background: rgba(255, 255, 255, 0.762); /* 50% 透明度 */
+      background: rgba(255, 255, 255, 0.78); /* 50% 透明度 */
       position: absolute;
       top: 0;
       left: 0;
@@ -23,7 +25,7 @@
     }
 
     table {
-      width: 95%; /* 调整页面宽度 */
+      width: 100%; /* 调整页面宽度 */
       max-width: 1000px; /* 调整页面最大宽度 */
       margin: 0 auto;
     }
