fix(minor): try to fix display issue on IOS browser

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body {
       font-family: 'Times New Roman', Times, serif;
       font-size: 18px; /* 缩小字体大小 */
-      background: url('images/home.jpg') no-repeat center center fixed;
+      background: url('images/home_transparent.png') no-repeat center center fixed;
       background-size: cover;
       min-height: 100vh; /* 确保 body 高度至少为视口高度 */
       margin: 0; /* 移除默认外边距 */
@@ -15,7 +15,7 @@
 
     body::after {
       content: "";
-      background: rgba(255, 255, 255, 0.78); /* 50% 透明度 */
+      background: rgba(255, 255, 255); /* 50% 透明度 */
       position: absolute;
       top: 0;
       left: 0;
