fix(minor): RGBA

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     body::after {
       content: "";
-      background: rgba(255, 255, 255); /* 50% 透明度 */
+      background: rgba(255, 255, 255, 0); /* 50% 透明度 */
       position: absolute;
       top: 0;
       left: 0;
