fix: modification date and news

--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
     <br>
     <td style="padding:0px;width:90%;vertical-align:middle">
     <p>
-      <li>[2024/02] My co-first author paper was accepted by DAC'25.
-      <li>[2024/02] I became the teaching assistant of the course Mathematical Logic (CS3308@SJTU, 2025 Spring), taught by Prof. <a href="http://wnzhang.net" target="_blank">Weinan Zhang</a>.
-      <li>[2024/01] The paper "KETA: Kinematic-Phrases-Enhanced Text-to-Motion Generation via Fine-grained Alignment" was released on <a href="https://arxiv.org/abs/2501.15058" target="_blank">arxiv</a>. It's fabulous to team up with the Bookstore TAs.
+      <li>[2025/02] My co-first author paper was <strong><b><font color='red'>accepted by DAC'25</font></b></strong>.
+      <li>[2025/02] I became the teaching assistant of the course Machine Learning (CS3308@SJTU, 2025 Spring), taught by Prof. <a href="http://wnzhang.net" target="_blank">Weinan Zhang</a>.
+      <li>[2025/01] The paper "KETA: Kinematic-Phrases-Enhanced Text-to-Motion Generation via Fine-grained Alignment" was released on <a href="https://arxiv.org/abs/2501.15058" target="_blank">arxiv</a>. It's fabulous to team up with the Bookstore TAs.
       <li>[2024/12] I'm glad to be selected as "Good TA"(top one-third of all TAs) in 2023 Fall and 2024 Spring semester.
       <li>[2024/07] Ended a wonderful period with SJTU Student Choir in World Choir Games 2024 in Auckland, New Zealand. We earned two gold medals and one area championship!
       <li>[2024/06] I'm thrilled to join EPCC Lab as a research intern, co-advised by Prof. Jingwen Leng and Prof. Yu Feng, let's make great things happen.
@@ -426,7 +426,7 @@
       <!-- <br> -->
       <hr>
         <p style="text-align:center">
-          This homepage is designed based on <a href="https://geng-haoran.github.io">Haoran Geng</a> and <a href="https://jonbarron.info/">Jon Barron</a>'s website. Last updated: Jan 26, 2024
+          This homepage is designed based on <a href="https://geng-haoran.github.io">Haoran Geng</a> and <a href="https://jonbarron.info/">Jon Barron</a>'s website. Last updated: Feb 23, 2024
 
           <br>
           © 2024 Xingyang Li
