feat(blog): new logo

--- a/temp.html
+++ b/temp.html
@@ -118,7 +118,7 @@
 
 <!-- body -->
 <body>
-  <!-- self-intro -->
+  <!-- self_formal-intro -->
   <table style="border:0px;border-spacing:0px;border-collapse:separate;"><tbody>
     <tr style="padding:0px">
       <td style="padding:0px">
@@ -140,7 +140,7 @@
                               <d>Guohao Dai</d></a> at <a href="https://dai.sjtu.edu.cn/" target="_blank">
                                 <d>the Design Automation Innovation & Domain-specific Artificial Intelligence (DAI) Group</d></a>. My research interest mainly lies in the intersection between artificial intelligence and computer systems, especially in the field of creating efficient algorithms, systems and accelerators for machine learning. <br><br>
 
-                Feel free to check out my CV and shoot me an email if you'd like to chat! if you're interested in my research or coursework.
+                Feel free to check out my CV and shoot me an email if you'd like to chat.
 
                 <!-- I am an incoming PhD student at  <a href="https://www.berkeley.edu/" target="_blank">
                   <d>UC Berkeley</d></a>. Previously, I was a visiting scholar at 
@@ -171,8 +171,8 @@
             <td style="padding:0%; width:26%; max-width:26%;"> <!-- move the photo a bit left -->
               <br>
               <!-- <br> -->
-              <!-- <img style="padding:1%; width:100%; max-width:90%;  display: block; margin-left: auto; margin-right: auto; " alt="profile photo" src="images/self.jpg" class="hoverZoomLink"> -->
-              <img id="profile-pic" style="padding:1%; width:100%; max-width:90%;  display: block; margin-left: auto; margin-right: auto; " alt="profile photo" src="images/self.jpg" class="hoverZoomLink" onmouseover="changeImage('images/self_guitar.jpg')" onmouseout="changeImage('images/self.jpg')">
+              <!-- <img style="padding:1%; width:100%; max-width:90%;  display: block; margin-left: auto; margin-right: auto; " alt="profile photo" src="images/self_formal.jpg" class="hoverZoomLink"> -->
+              <img id="profile-pic" style="padding:1%; width:100%; max-width:90%;  display: block; margin-left: auto; margin-right: auto; " alt="profile photo" src="images/self_formal.jpg" class="hoverZoomLink" onmouseover="changeImage('images/self_guitar.jpg')" onmouseout="changeImage('images/self_formal.jpg')">
               <!-- <a href="https://hits.seeyoufarm.com" target="_blank">
                 <img 
                   src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgeng-haoran.github.io&count_bg=%23FF8400&title_bg=%23545353&icon=tableau.svg&icon_color=%23F3F209&title=hits&edge_flat=false" 
