fix(pics): move from my assets

--- a/index.html
+++ b/index.html
@@ -449,11 +449,11 @@
           
           <p>
             Apart from my passion in computer science, I have a wide range of interests and hobbies.
-            <br><li>I am a tenor in SJTU's Student Choir🎶, winning first prize in <a href="./images/music/xiangyang.jpg" target="_blank">
-              <d>National College Students' Art Performance</d></a> and two gold medals in <a href="./images/music/aukland.jpg" target="_blank">
-                <d>World Choir Games 2024</d></a> in both mixed choir and spiritual belief. </li> 
+            <br><li>I am a tenor in SJTU's Student Choir🎶, winning first prize in <a href="./images/xiangyang.jpg" target="_blank">
+              <d>National College Students' Art Performance</d></a> and two gold medals in <a href="./images/aukland.jpg" target="_blank">
+                <d>World Choir Games 2024</d></a> in both mixed choir and spiritual belief. </li> Be it in the rehearsal hall or singing on the stage, I feel free to embrace the mixture of emotions and the accuracy of music. I'm also learning Bamboo Flute these days, this is a Chinese traditional instrument that can express the beauty of nature.
             <br><li>I am a math enthusiast, and I'm interested in mathematical logic and information theory. </li>
-            <br><li>I am a football lover⚽, leading ACMClass2022 to win the champion in ACM Class Football Competition twice <a href="./images/football/2024ASF.jpg" target="_blank">
+            <br><li>I am a football lover⚽, leading ACMClass2022 to win the champion in ACM Class Football Competition twice <a href="./images/2024ASF.jpg" target="_blank">
               <d>with my good friends.</d></a> </li>
           </p>
         </td>
