--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
   </script>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Xingyang Li   |  李兴阳</title>
+  <title>Haoran Wang   |  王浩然</title>
   
-  <meta name="author" content="Xingyang Li">
+  <meta name="author" content="Haoran Wang">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -126,19 +126,24 @@
           <tr style="padding:0px">
             <td style="padding:2%;width:55%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Xingyang Li | 李兴阳</name>
+                <name>Haoran Wang | 王浩然</name>
               </p>
               <p style="text-align: justify">
               <intro>
-                Enrolled at 16, I am now a third-year undergraduate student at <a href="https://acm.sjtu.edu.cn" target="_blank">
-                  <d>ACM Honors Class</d></a>, <a href="https://zhiyuan.sjtu.edu.cn/" target="_blank">
-                    <d>Zhiyuan College</d></a>, <a href="https://en.sjtu.edu.cn/" target="_blank">
-                      <d>Shanghai Jiao Tong University</d></a>. Currently, I am a research intern at <a href="https://epcc.sjtu.edu.cn" target="_blank">
-                        <d>Emerging Parallel Computer Center (EPCC Lab)</d></a>, co-advised by Prof. <a href="https://yufenguofr.github.io/" target="_blank">
-                          <d>Yu Feng</d></a> and Prof. <a href="https://www.cs.sjtu.edu.cn/~leng-jw/" target="_blank">
-                          <d>Jingwen Leng</d></a>. I also had a wonderful time working with Prof. <a href="https://dai.sjtu.edu.cn/pepledetail.html?id=218" target="_blank">
-                              <d>Guohao Dai</d></a> at <a href="https://dai.sjtu.edu.cn/" target="_blank">
-                                <d>the Design Automation Innovation & Domain-specific Artificial Intelligence (DAI) Group</d></a>. My research interest mainly lies in the intersection between artificial intelligence and computer systems, especially in the field of creating efficient algorithms, systems and accelerators for machine learning. <br><br>
+                I am now a senior undergraduate student at <a href="https://acm.sjtu.edu.cn" target="_blank">
+                  <d>ACM Honors Class</d></a>, <a href="https://en.sjtu.edu.cn/" target="_blank">
+                    <d>Shanghai Jiao Tong University</d></a> majoring in Computer Science. <br><br>
+
+                Now I am a visiting student at <a href="https://www.wavlab.org/" target="_blank">
+                      <d>WAVLab</d></a> affiliated with <a href="https://www.lti.cs.cmu.edu/" target="_blank"><d>LTI/CMU</d></a>, advised by Prof. <a href="https://sites.google.com/view/shinjiwatanabe" target="_blank">
+                        <d>Shinji Watanabe</d></a>. During my junior year, I am very fortunate to work with Prof. <a href="https://x-lance.sjtu.edu.cn/~kaiyu/" target="_blank">
+                          <d>Kai Yu</d></a> at <a href="https://x-lance.github.io/" target="_blank">
+                            <d>X-LANCE Lab</d></a>. <br><br>
+
+                My research interests lie in generative audio and speech processing, especially in neural audio codecs and speech
+                              language models. My long-term goal is to pioneer a universal audio foundation model capable of holistically
+                              understanding and generating the full spectrum of sound, including speech, music, and complex acoustic scenes, while
+                              making these models high-fidelity, controllable, and efficient. <br><br>
 
                 Feel free to check out my CV and shoot me an email if you'd like to chat.
 
@@ -161,12 +166,9 @@
                 
                 </intro>
               <p style="text-align:center">
-                <a href="brucelee_sjtu@sjtu.edu.cn" target="_blank">Email</a> &nbsp/&nbsp
-                <a href="https://radioheading.github.io" target="_blank">Personal Blog</a> &nbsp/&nbsp
-                <a href="pdf/CV.pdf" target="_blank">CV (Eng)</a> &nbsp;&nbsp/&nbsp
-                <a href="pdf/CV_chn.pdf" target="_blank">CV (Chn)</a> &nbsp;&nbsp/&nbsp
-                <a href="https://github.com/Radioheading/" target="_blank">Github</a>&nbsp/&nbsp
-                <a href="https://x.com/XYLi_Bruce" target="_blank">Twitter</a>
+                <a href="wanghaor@sjtu.edu.cn" target="_blank">Email</a> &nbsp/&nbsp
+                <a href="pdf/CV.pdf" target="_blank">CV</a> &nbsp;&nbsp/&nbsp
+                <a href="https://github.com/whr-a/" target="_blank">Github</a>&nbsp/&nbsp
               </p>
             </td>
             <td style="padding:0%; width:26%; max-width:26%;"> <!-- move the photo a bit left -->
