--- a/temp.html
+++ b/temp.html
@@ -126,17 +126,16 @@
           <tr style="padding:0px">
             <td style="padding:2%;width:55%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Xingyang Li | 李兴阳</name>
+                <name>Haoran Wang | 王浩然</name>
               </p>
               <p style="text-align: justify">
               <intro>
-                Enrolled at 16, I am now a third-year undergraduate student at <a href="https://acm.sjtu.edu.cn" target="_blank">
+                Enrolled at 18, I am now a senior undergraduate student at <a href="https://acm.sjtu.edu.cn" target="_blank">
                   <d>ACM Honors Class</d></a>, <a href="https://zhiyuan.sjtu.edu.cn/" target="_blank">
                     <d>Zhiyuan College</d></a>, <a href="https://en.sjtu.edu.cn/" target="_blank">
-                      <d>Shanghai Jiao Tong University</d></a>. Currently, I am a research intern at <a href="https://epcc.sjtu.edu.cn" target="_blank">
-                        <d>Emerging Parallel Computer Center (EPCC Lab)</d></a>, co-advised by Prof. <a href="https://yufenguofr.github.io/" target="_blank">
-                          <d>Yu Feng</d></a> and Prof. <a href="https://www.cs.sjtu.edu.cn/~leng-jw/" target="_blank">
-                          <d>Jingwen Leng</d></a>. I also had a wonderful time working with Prof. <a href="https://dai.sjtu.edu.cn/pepledetail.html?id=218" target="_blank">
+                      <d>Shanghai Jiao Tong University</d></a>. Currently, I am a visiting scholar at <a href="https://www.wavlab.org/" target="_blank">
+                        <d>WAVLab</d></a> affiliated with <a href="https://www.wavlab.org/" target="_blank"><d>LTI/CMU</d></a>, advised by Prof. <a href="https://yufenguofr.github.io/" target="_blank">
+                          <d>Shinji Watanabe</d></a>. I also had a wonderful time working with Prof. <a href="https://dai.sjtu.edu.cn/pepledetail.html?id=218" target="_blank">
                               <d>Guohao Dai</d></a> at <a href="https://dai.sjtu.edu.cn/" target="_blank">
                                 <d>the Design Automation Innovation & Domain-specific Artificial Intelligence (DAI) Group</d></a>. My research interest mainly lies in the intersection between artificial intelligence and computer systems, especially in the field of creating efficient algorithms, systems and accelerators for machine learning. <br><br>
 
