--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </script>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Haoran Wang   |  王浩然</title>
+  <title>Haoran Wang</title>
   
   <meta name="author" content="Haoran Wang">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -126,7 +126,7 @@
           <tr style="padding:0px">
             <td style="padding:2%;width:55%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Haoran Wang | 王浩然</name>
+                <name>Haoran Wang</name>
               </p>
               <p style="text-align: justify">
               <intro>
@@ -175,7 +175,7 @@
               <br>
               <!-- <br> -->
               <!-- <img style="padding:1%; width:100%; max-width:90%;  display: block; margin-left: auto; margin-right: auto; " alt="profile photo" src="images/self_formal.jpg" class="hoverZoomLink"> -->
-              <img id="profile-pic" style="padding:1%; width:100%; max-width:90%;  display: block; margin-left: auto; margin-right: auto; " alt="profile photo" src="images/self_formal.jpg" class="hoverZoomLink" onmouseover="changeImage('images/self_guitar.jpg')" onmouseout="changeImage('images/self_formal.jpg')">
+              <img id="profile-pic" style="padding:1%; width:100%; max-width:90%;  display: block; margin-left: auto; margin-right: auto; " alt="profile photo" src="images/causal.jpg" class="hoverZoomLink">
               <!-- <a href="https://hits.seeyoufarm.com" target="_blank">
                 <img 
                   src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgeng-haoran.github.io&count_bg=%23FF8400&title_bg=%23545353&icon=tableau.svg&icon_color=%23F3F209&title=hits&edge_flat=false" 
