--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               <br>
               <!-- <br> -->
               <!-- <img style="padding:1%; width:100%; max-width:90%;  display: block; margin-left: auto; margin-right: auto; " alt="profile photo" src="images/self_formal.jpg" class="hoverZoomLink"> -->
-              <img id="profile-pic" style="padding:1%; width:100%; max-width:90%;  display: block; margin-left: auto; margin-right: auto; " alt="profile photo" src="images/causal.jpg" class="hoverZoomLink">
+              <img id="profile-pic" style="padding:1%; width:100%; max-width:90%;  display: block; margin-left: auto; margin-right: auto; " alt="profile photo" src="images/causal.jpeg" class="hoverZoomLink">
               <!-- <a href="https://hits.seeyoufarm.com" target="_blank">
                 <img 
                   src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgeng-haoran.github.io&count_bg=%23FF8400&title_bg=%23545353&icon=tableau.svg&icon_color=%23F3F209&title=hits&edge_flat=false" 
