--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 
                 </intro>
               <p style="text-align:center">
-                <a href="wanghaor@sjtu.edu.cn" target="_blank">Email</a> &nbsp/&nbsp
+                <a href="mailto:wanghaor@sjtu.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="pdf/CV.pdf" target="_blank">CV</a> &nbsp;&nbsp/&nbsp
                 <a href="https://github.com/whr-a/" target="_blank">Github</a>&nbsp/&nbsp
               </p>
