--- a/index.html
+++ b/index.html
@@ -198,39 +198,26 @@
           <heading>Education</heading>
       <br>
       <tr>
-        <td style="padding-left:27px;padding-right:10px;width:25%;vertical-align:middle"><img src="images/DAI-logo.png", width="170"></td>
+        <td style="padding-left:27px;padding-right:10px;width:25%;vertical-align:middle"><img src="images/CMU.png", width="170"></td>
         <td width="90%" valign="center">
-          <strong><a href="http://dai.sjtu.edu.cn" target="_blank"><papertitle>Design Automation Innovation & Domain-specific Artificial Intelligence Group</papertitle></a></strong>
-          <br> <strong>Research Intern</strong>
-          <br> Research Advisor: Prof. <a href="https://dai.sjtu.edu.cn/pepledetail.html?id=218" target="_blank">
-            <d>Guohao Dai</d></a>
-          <br> Research Interest: Algorithm-hardware co-design for accelerating 3D video generation models(3D-VGMs).
+          <strong>Carnegie Mellon University</strong>
+          <br> Visiting Scholar • Jul. 2025 - Present
+          <br> Advisor: Prof. <a href="https://sites.google.com/view/shinjiwatanabe" target="_blank">
+            <d>Shinji Watanabe</d></a>
         </td>
       </tr>
       <tr>
-        <td style="padding-left:27px;padding-right:10px;width:25%;vertical-align:middle"><img src="images/EPCC.png", width="170"></td>
+        <td style="padding-left:27px;padding-right:10px;width:25%;vertical-align:middle"><img src="images/SJTU.png", width="170"></td>
         <td width="90%" valign="center">
-          <strong><a href="http://epcc.sjtu.edu.cn" target="_blank"><papertitle>Emerging Parallel Computer Center (EPCC Lab)</papertitle></a></strong>
-          <br> <strong>Research Intern</strong>
-          <br> Research Advisor: Prof. <a href="https://www.cs.sjtu.edu.cn/~leng-jw/" target="_blank">
-            <d>Jingwen Leng</d></a> and Prof. <a href="https://yufenguofr.github.io/" target="_blank">
-              <d>Yu Feng</d></a>
-          <br> Research Interest: Mobile visual computing and quantization algorithms for large language models.
+          <strong>Shanghai Jiao Tong University</strong>
+          <br> B.Eng. in Computer Science • Sept. 2022 - June 2026 (Expected)
+          <br> Academic Advisor: Prof. <a href="https://apex.sjtu.edu.cn/members/yyu" target="_blank">
+            <d>Yong Yu</d></a>
+          <br> Research Advisor: Prof. <a href="https://x-lance.sjtu.edu.cn/~kaiyu/" target="_blank">
+            <d>Kai Yu</d></a>
         </td>
-      </tr>
-      <tr>
-          <br>
-          <td style="padding-left:20px;padding-right:10px;width:25%;vertical-align:middle"><img src="images/SJTU.png", width="165"></td>
-          <td width="90%" valign="center">
-            <strong><a href="https://en.sjtu.edu.cn/" target="_blank"><papertitle>Shanghai Jiao Tong University (SJTU)</papertitle></a></strong>
-            <br> <em>2022.08 - Present</em>
-            <br> <strong> Undergraduate Student</strong>, <a href="https://acm.sjtu.edu.cn" target="_blank">ACM Honors Class</a>
-            <br> GPA ranking:  <strong>4</strong>/30
-            <br> Academic Advisor: Prof. <a href="https://apex.sjtu.edu.cn/members/yyu">Yong Yu</a>
-          </td>
       </tr>
       
-        
   </tbody></table>
 
 <!-- Selected Publications -->
