--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
               <p style="text-align:center">
                 <a href="mailto:wanghaor@sjtu.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="pdf/CV.pdf" target="_blank">CV</a> &nbsp;&nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?hl=zh-CN&user=slH6TeAAAAAJ" target="_blank">Google Scholar</a> &nbsp;&nbsp/&nbsp
                 <a href="https://github.com/whr-a/" target="_blank">Github</a>&nbsp/&nbsp
               </p>
             </td>
@@ -251,7 +252,7 @@
     </tr>
 
     <!-- General Discrete Speech Codec -->
-    <tr>
+    <tr bgcolor="#ffffec">
       <td style="padding:20px 0px 0px 0px; width:100%; vertical-align:middle;">
         <a href="https://arxiv.org/pdf/2505.22515" target="_blank">
           <papertitle>Towards General Discrete Speech Codec for Complex Acoustic Environments: A Study of Reconstruction and Downstream Task Consistency</papertitle>
