--- a/index.html
+++ b/index.html
@@ -236,17 +236,15 @@
     <!-- BSCodec (代表作，高亮) -->
     <tr bgcolor="#ffffec">
       <td style="padding:20px 0px 0px 0px; width:100%; vertical-align:middle;">
-        <a href="https://arxiv.org/pdf/2511.06150" target="_blank">
-          <papertitle>BSCodec: A Band-Split Neural Codec for High-Quality Universal Audio Reconstruction</papertitle>
-        </a>
+        <papertitle>BSCodec: A Band-Split Neural Codec for High-Quality Universal Audio Reconstruction</papertitle>
         <br>
         <strong>Haoran Wang</strong>, Jiatong Shi, Jinchuan Tian, Bohan Li, Kai Yu, Shinji Watanabe
         <br>
         Under review.
         <br>
         <a href="https://arxiv.org/pdf/2511.06150" target="_blank">arXiv</a> /
-        <a href="https://github.com/espnet/espnet/pull/6297" target="_blank">Code</a> /
-        <a href="https://anonymous-submitany.github.io/" target="_blank">Demo</a>
+        <a href="https://github.com/espnet/espnet/pull/6297" target="_blank">code</a> /
+        <a href="https://anonymous-submitany.github.io/" target="_blank">demo</a>
         <p></p>
       </td>
     </tr>
@@ -254,9 +252,7 @@
     <!-- General Discrete Speech Codec -->
     <tr bgcolor="#ffffec">
       <td style="padding:20px 0px 0px 0px; width:100%; vertical-align:middle;">
-        <a href="https://arxiv.org/pdf/2505.22515" target="_blank">
-          <papertitle>Towards General Discrete Speech Codec for Complex Acoustic Environments: A Study of Reconstruction and Downstream Task Consistency</papertitle>
-        </a>
+        <papertitle>Towards General Discrete Speech Codec for Complex Acoustic Environments: A Study of Reconstruction and Downstream Task Consistency</papertitle>
         <br>
         <strong>Haoran Wang</strong>, Guanyu Chen, Bohan Li, Hankun Wang, Yiwei Guo, Zhihan Li, Xie Chen, Kai Yu
         <br>
@@ -282,9 +278,7 @@
     <!-- SLM coherence paper -->
     <tr>
       <td style="padding:20px 0px 20px 0px; width:100%; vertical-align:middle;">
-        <a href="https://arxiv.org/pdf/2412.17048" target="_blank">
-          <papertitle>Why Do Speech Language Models Fail to Generate Semantically Coherent Outputs? A Modality Evolving Perspective</papertitle>
-        </a>
+        <papertitle>Why Do Speech Language Models Fail to Generate Semantically Coherent Outputs? A Modality Evolving Perspective</papertitle>
         <br>
         Hankun Wang, <strong>Haoran Wang</strong>, Yiwei Guo, Zhihan Li, Chenpeng Du, Xie Chen, Kai Yu
         <br>
