--- a/index.html
+++ b/index.html
@@ -300,8 +300,7 @@
       <!-- <br> -->
       <hr>
         <p style="text-align:center">
-          This homepage is designed based on <a href="https://geng-haoran.github.io">Haoran Geng</a> and <a href="https://jonbarron.info/">Jon Barron</a>'s website. Last updated: Feb 23, 2024
-
+          This homepage is designed based on a previous version of <a href="https://geng-haoran.github.io">Xingyang Li</a>'s website, which itself was inspired by thedesigns of <a href="https://geng-haoran.github.io">Haoran Geng</a> and <a href="https://jonbarron.info/">Jon Barron</a>. Last updated: Nov. 29, 2025
           <br>
           © 2025 Haoran Wang
         </p>
