--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <br>
         <strong>Haoran Wang</strong>, Jiatong Shi, Jinchuan Tian, Bohan Li, Kai Yu, Shinji Watanabe
         <br>
-        Under review.
+        EACL Findings 2026
         <br>
         <a href="https://arxiv.org/pdf/2511.06150" target="_blank">arXiv</a> /
         <a href="https://github.com/espnet/espnet/pull/6297" target="_blank">code</a> /
@@ -256,7 +256,7 @@
         <br>
         <strong>Haoran Wang</strong>, Guanyu Chen, Bohan Li, Hankun Wang, Yiwei Guo, Zhihan Li, Xie Chen, Kai Yu
         <br>
-        IEEE Automatic Speech Recognition and Understanding Workshop (ASRU), 2025.
+        ASRU 2025
         <br>
         <a href="https://arxiv.org/pdf/2505.22515" target="_blank">arXiv</a>
         <p></p>
@@ -270,7 +270,9 @@
         <br>
         Jiatong Shi, <strong>Haoran Wang</strong>, William Chen, Chenda Li, Wangyou Zhang, Jinchuan Tian, Shinji Watanabe
         <br>
-        IEEE Automatic Speech Recognition and Understanding Workshop (ASRU), 2025.
+        ASRU 2025
+        <br>
+        <a href="https://arxiv.org/pdf/2511.22687" target="_blank">arXiv</a>
         <p></p>
       </td>
     </tr>
@@ -282,13 +284,25 @@
         <br>
         Hankun Wang, <strong>Haoran Wang</strong>, Yiwei Guo, Zhihan Li, Chenpeng Du, Xie Chen, Kai Yu
         <br>
-        Under review.
+        ICASSP 2026
         <br>
         <a href="https://arxiv.org/pdf/2412.17048" target="_blank">arXiv</a>
         <p></p>
       </td>
     </tr>
 
+    <tr>
+      <td style="padding:20px 0px 20px 0px; width:100%; vertical-align:middle;">
+        <papertitle>Robust and Efficient Autoregressive Speech Synthesis with Dynamic Chunk-wise Prediction Policy</papertitle>
+        <br>
+        Bohan Li<sup>*</sup>, Zhihan Li<sup>*</sup>, <strong>Haoran Wang</strong>, Hanglei Zhang, Yiwei Guo, Hankun Wang, Xie Chen, Kai Yu
+        <br>
+        ICASSP 2026
+        <br>
+        <a href="https://arxiv.org/pdf/2412.17048" target="_blank">arXiv</a>
+        <p></p>
+      </td>
+    </tr>
   </tbody>
 </table>
 
